syntax = "proto3";

option go_package = "./;cmcinterface";
option java_multiple_files = true;
option java_package = "de.fhg.aisec.ids.cmcinterface";
option java_outer_classname = "CmcInterfaceProto";

package cmcinterface;

enum Status {
  OK = 0;
  FAIL = 1;
  NOT_IMPLEMENTED = 2;
}

service CMCService {
  // Signs content of request with key that belongs to ID of requester
  rpc TLSSign(TLSSignRequest) returns (TLSSignResponse) {}
  //rpc TLSCreate(TLSCreateRequest) returns (TLSCreateResponse) {}
  rpc Attest(AttestationRequest) returns (AttestationResponse) {}
  rpc Verify(VerificationRequest) returns (VerificationResponse) {}
}

message TLSSignRequest {
  string id = 1;
  bytes content = 2;
}

message TLSSignResponse {
  Status status = 1;
  bytes signed_content = 2;
}

message AttestationRequest {
  string id = 1;
  bytes nonce = 2;
}

message AttestationResponse {
  Status status = 1;
  bytes attestation_report = 2;
}

message VerificationRequest {
  bytes nonce = 1;
  bytes attestation_report = 2;
}

message VerificationResponse {
  Status status = 1;
  bytes verification_result = 2;
}